@@ -5,6 +5,7 @@ Changelog
 1.1.1 (unreleased)
 ------------------
 
+- Also reindex Date (which defaults to modified) when moving an object. [njohner]
 - Fixed error (`issue 13 <https://github.com/4teamwork/ftw.copymovepatches/issues/13>`_)  when renaming Plone Site.  [maurits]
 
 
